app/styles/public/_variables.scss
//
// Variables
// --------------------------------------------------


//== Colors
//
//## Black, white, and gold colors for use across public.

$black:                  rgba(31, 35, 36, 1) !default; // #1f2324

$white:                  rgba(204, 216, 219, 1) !default; // #d5dadb

$gold:                   rgba(168, 155, 123, 1) !default; // #a89b7b


//== Scaffolding
//
//## Settings for some of the most global styles.

//** Background attachment for `<body>`.
$body-bg-attachment:    fixed !default;
//** Background color for `<body>`.
$body-bg-color:         $black !default;
//** Background image for `<body>`.
$body-bg-image:         url(../images/background.png) !default;
//** Background position for `<body>`.
$body-bg-position:      center center !default;
//** Background repeat for `<body>`.
$body-bg-repeat:        no-repeat !default;
//** Global text color on `<body>`.
$text-color:            $white !default;

//** Background attachment for `#grid`.
$grid-bg-attachment:    fixed !default;
//** Background image for `#grid`.
$grid-bg-image:         url(../images/grid.png) !default;
//** Background image for `#grid.points`.
$grid-points-bg-image:  url(../images/grid_point.png) !default;

//** Global textual link color.
$link-color:            $white !default;
//** Link hover color.
$link-hover-color:      $gold !default;


//== Typography
//
//## Font and more.

$font-family-sans-serif:  'Proxima Nova', 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, Verdana, sans-serif !default;
$font-family-base:        $font-family-sans-serif !default;

$font-size-base:          14px !default;
$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
$font-size-small:         ceil(($font-size-base * .85)) !default; // ~12px


//** By default, this inherits from the `<body>`.
$headings-font-family:    inherit !default;
$headings-font-weight:    300 !default;
$headings-color:          inherit !default;


//-- Z-index master list
//
// Warning: Avoid customizing these values. They're used for a bird's eye view
// of components dependent on the z-axis and are designed to all work together.

$zindex-background:        -1 !default;


//== Media queries breakpoints
//
//## Define the breakpoints at which your layout will change, adapting to different screen sizes.

// Small screen / tablet
$screen-sm-min:              768px !default;

// Medium screen / desktop
$screen-md-min:              992px !default;

// Large screen / wide desktop
$screen-lg-min:              1200px !default;

// So media queries don't overlap when required, provide a maximum
$screen-xs-max:              ($screen-sm-min - 1) !default;
$screen-sm-max:              ($screen-md-min - 1) !default;
$screen-md-max:              ($screen-lg-min - 1) !default;


//== Type
//
//##

//** Horizontal line color.
$hr-border:                   rgba($white, .07) !default;

